--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,6 +6,14 @@
         android:title="@string/saved_transcriptions"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_voice_commands"
+        android:title="@string/voice_commands"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_templates"
+        android:title="@string/templates"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_about"
         android:title="@string/about"
         app:showAsAction="never" />
